--- a/BlazorSQLWebApp/index.cshtml
+++ b/BlazorSQLWebApp/index.cshtml
@@ -3,23 +3,21 @@
 @{
 }
 
-
 <br>
 <h2>List of Clients</h2>
-<a class='btn btn-primary btn-sm' href='/Clients/Create'>New Client</a>
-
+<a class="btn btn-primary btn-sm" href="/Clients/Create">New Client</a>
 <table class="table">
-    <thread>
+    <thead>
         <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
             <th>Phone</th>
-            <th>Adress</th>
+            <th>Address</th>
             <th>Created At</th>
-            <th>Action</th>
+            <th>Action<th>
         </tr>
-    </thread>
+    </thead>
     <tbody>
         @foreach(var item in Model.listClients)
         {
@@ -31,8 +29,8 @@
                 <td>@item.address</td>
                 <td>@item.created_at</td>
                 <td>
-                    <a class="btn bt-primary btn-sm" href="/Clients/Edit?id=">Edit</a>
-                    <a class="btn bt-primary btn-sm" href="/Clients/Delete?id=">Delete</a>
+                    <a class="btn btn-primary btn-sm" href="/Clients/Edit?id=@item.id">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="/Clients/Delete?id=@item.id">Delete</a>
                 </td>
             </tr>
         }
